# DDA-BERT

./: .gitattributes  License  README.md
DB_search_config/: AlphaPept.yaml  FP_MSBooster.workflow  Sage.json  msConvert.config.txt
software/: Dockerfile  License.md  README.md  main_linux.py  pyproject.toml  requirements.txt
software/config/: dda_bert_config.yml  final.yaml  parameters.yaml
software/resource/model/: mp_rank_00_model_states.pt
software/sage/: linux_mzml_rawspectrum
software/src/: common_config.py  logger_utils.py  main_process_handler.py
software/src/common/: constant.py  eval_model.py  runtime_data_info.py
software/src/dda_bert/: __init__.py  cli.py  common_config.py  logger_utils.py  main_process_handler.py
software/src/dda_bert/common/: constant.py  eval_model.py
software/src/dda_bert/config/: AlphaPept.yaml  FP_MSBooster.workflow  Model.yaml  Sage.json  dda_bert_config.yml  log.config
software/src/dda_bert/process_handler/: alphapept_process_handler.py  clear_data_process_handler.py  common_process_handler.py  fdr_calc_no_finetune_process_handler.py  fragpipe_process_handler.py  getdata_process_handler.py  predict_process_handler.py  protein_infer_process_handler.py  result_build_process_handler.py  sage_process_handler.py
software/src/dda_bert/services/: alphapept_fasta_digest_pep.py  alphapept_hdf_to_csv_param.py  alphapept_protien_infer_v2.py  alphapept_protien_infer_v3.py  data_combine.py  fdr_psm_independent.py  fp_gen_pred_ipc_replace_residues.py  fp_search_clean.py  gen_pred_ipc.py  pred_rt_v4_3.py  sage_search_clean.py
software/src/dda_bert/transformer/: dataset.py  decoder.py  model.py
software/src/dda_bert/utils/: config_util.py  file_utils.py
software/src/process_handler/: alphapept_process_handler.py  clear_data_process_handler.py  common_process_handler.py  fdr_calc_no_finetune_process_handler.py  fragpipe_process_handler.py  getdata_process_handler.py  predict_process_handler.py  protein_infer_process_handler.py  result_build_process_handler.py  sage_process_handler.py
software/src/services/: alphapept_fasta_digest_pep.py  alphapept_gen_pred_ipc.py  alphapept_protien_infer_v2.py  alphapept_search_clean.py  data_combine.py  gen_pred_ipc.py  pred_rt_v2_2.py
software/src/transformer/: model.py
software/src/utils/: config_util.py  gpu_utils.py
(+235 files in other folders)
